# changedetection-mcp-server

./: .env.example  .gitignore  PRODUCTION_ENHANCEMENTS.md  README.md  pyproject.toml  requirements-prod.txt  requirements.txt  server.py  vercel.json
api/: serverless.py
